--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="container">
         <div class="input-box">
-            <input type="text" id="searchfood" placeholder="type of meal">
-            <input type="'number" id="searchnumber" placeholder="Enter the number of item">
+            <input type="text" id="searchfood" placeholder="Type of meal">
+            <input type="'number" id="searchnumber" placeholder="Quantity">
             <button id="search-btn" class="btn btn-primary" onclick="search()">Search</button>
         </div>
         <div class="row">
